<resources>
    <string name="app_name">MyHealth</string>
    <string name="datos_del_paciente">Patient data</string>
    <string name="peticion_cita">Book appointment</string>
    <string name="guardar" >Save</string>
    <string name="guardar_la_cita">Save appointment</string>
    <string name="seleccione_una_fecha">Pick a date</string>
    <string name="seleccione_la_hora">Pick a time</string>
    <string name="guardar_cita">Guardar</string>
    <string name="datos_de_paciente">Patient data</string>
    <string name="nombre">First name</string>
    <string name="datos_personales">Personal data</string>
    <string name="dni">ID</string>
    <string name="tlf_de_contacto">Phone number</string>
    <string name="direccion">Address</string>
    <string name="pa_s">Country</string>
    <string name="codigo_postal">Postal code</string>
    <string name="apellidos">Surname</string>
    <string name="fecha_de_nacimiento">Date of birth</string>
    <string name="pedir_cita">Book an appointment</string>
    <string name="seleccione_sexo">Select sex</string>
    <string name="sexo">Sex:</string>
    <string name="medical_history">Medical history</string>
    <string name="volver">Return</string>
    <string name="editar">Edit</string>
    <string name="services">Medical services</string>
    <string name="confirmar_cita">Confirm appointment</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="return_button">Return</string>

</resources>