<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityPatientData">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="677dp"
        android:text="@string/datos_de_paciente"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="179dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="textCapSentences"
        android:hint="@string/nombre"
        android:text="Gema"
        android:textSize="14sp"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/editTextSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextSurname"
        android:layout_width="179dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="textCapSentences"
        android:hint="@string/apellidos"
        android:text="García Sáez"
        android:textSize="14sp"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/editTextID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextID"
        android:layout_width="179dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="textCapSentences"
        android:hint="@string/dni"
        android:text="12345678A"
        android:textSize="14sp"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/editTextTlf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSurname" />

    <EditText
        android:id="@+id/editTextTlf"
        android:layout_width="179dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/tlf_de_contacto"
        android:text="666666666"
        android:textSize="14sp"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/spinnerSex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextID" />

    <Spinner
        android:id="@+id/spinnerSex"
        android:layout_width="257dp"
        android:layout_height="58dp"
        android:layout_marginBottom="12dp"
        android:enabled="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTlf" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="247dp"
        android:layout_height="54dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:cursorVisible="false"
        android:drawableEnd="@android:drawable/ic_menu_today"
        android:enabled="false"
        android:focusable="false"
        android:hint="@string/fecha_de_nacimiento"
        android:inputType="none"
        android:longClickable="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextCountry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSex"
        tools:ignore="KeyboardInaccessibleWidget,TextFields" />

    <EditText
        android:id="@+id/editTextCountry"
        android:layout_width="179dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="textCapSentences"
        android:hint="@string/pa_s"
        android:textSize="14sp"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/editTextPostalCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <EditText
        android:id="@+id/editTextPostalCode"
        android:layout_width="179dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/codigo_postal"
        android:textSize="14sp"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/editTextAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="179dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/direccion"
        android:inputType="textCapSentences"
        android:textSize="14sp"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPostalCode" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/editar"
        android:backgroundTint="@color/theme_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSave" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="goToHome"
        android:text="@string/guardar"
        android:backgroundTint="@color/theme_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>