<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityBookAppointment"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/textViewAppointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="677dp"
        android:text="@string/pedir_cita"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewAppointmentDate"
        android:layout_width="225dp"
        android:layout_height="22dp"
        android:text="Seleccione una fecha:"
        android:textSize="14sp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppointment" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="247dp"
        android:layout_height="54dp"
        android:layout_marginBottom="4dp"
        android:clickable="true"
        android:cursorVisible="false"
        android:drawableEnd="@android:drawable/ic_menu_today"
        android:enabled="true"
        android:focusable="true"
        android:hint="@string/pick_a_date"
        android:inputType="none"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewAppointmentTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="KeyboardInaccessibleWidget,TextFields" />

    <TimePicker
        android:id="@+id/appointmentTimePicker"
        android:layout_width="249dp"
        android:layout_height="202dp"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppointmentTime" />

    <TextView
        android:id="@+id/textViewAppointmentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="Seleccione una hora:"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextDate" />

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="@color/theme_primary"
        android:onClick="goToMainActivity"
        android:text="@string/confirmar_cita"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appointmentTimePicker"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
